<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="ca.felix.courrierv2.MainActivity" >
    
    <item
        android:id="@+id/action_search"
        android:orderInCategory="1"
        android:icon="@drawable/ic_action_search"
        android:title="@string/action_search"
        app:showAsAction="ifRoom|collapseActionView"
        app:actionViewClass="android.support.v7.widget.SearchView" />
    
    <item
        android:id="@+id/action_gps"
        android:orderInCategory="2"
        android:icon="@drawable/ic_action_location_found"
        android:title="@string/action_gps"
        android:checkable="true"
        android:checked="true"
        app:showAsAction="ifRoom"/>
    
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:icon="@drawable/ic_action_settings"
        android:title="@string/action_settings"
        app:showAsAction="ifRoom"/>

</menu>
